Xfce: Fix issues with panel's dark mode

--- a/gtk-3.0/apps/_xfce.scss
+++ b/gtk-3.0/apps/_xfce.scss
@@ -3,7 +3,7 @@
     border-radius: 0;
 
     &.panel {
-        background-color: rgba(235, 235, 235, 0.7);
+        background-color: $panel_bg_color;
         color: $fg_color;
         text-shadow: none;
         -gtk-icon-shadow: none;
@@ -43,7 +43,7 @@
     }
     &:active, &:checked {
       color: $fg_color;
-      border-bottom: 2px solid $selected_bg_color;
+      box-shadow: inset 0 -2px $selected_bg_color;
       background-color: darken($bg_color, 8%);
 
       label, image { color: inherit; }
